--- a/redux2/package.json
+++ b/redux2/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-slick": "^0.24.0",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0"
   },
